--- a/manifest-lock.overrides.aarch64.yaml
+++ b/manifest-lock.overrides.aarch64.yaml
@@ -9,17 +9,27 @@
 # for FCOS-specific packages (ignition, afterburn, etc.).  
 
 packages:
+  grub2-common:
+    evra: 1:2.12-10.fc41.noarch
+    metadata:
+      bodhi: https://bodhi.fedoraproject.org/updates/FEDORA-2024-7d58433dd5
+      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1802
+      type: fast-track
+  grub2-tools:
+    evra: 1:2.12-10.fc41.aarch64
+    metadata:
+      bodhi: https://bodhi.fedoraproject.org/updates/FEDORA-2024-7d58433dd5
+      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1802
+      type: fast-track
+  grub2-tools-minimal:
+    evra: 1:2.12-10.fc41.aarch64
+    metadata:
+      bodhi: https://bodhi.fedoraproject.org/updates/FEDORA-2024-7d58433dd5
+      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1802
+      type: fast-track
   grub2-efi-aa64:
     evra: 1:2.12-10.fc41.aarch64
     metadata:
       bodhi: https://bodhi.fedoraproject.org/updates/FEDORA-2024-7d58433dd5
       reason: https://github.com/coreos/fedora-coreos-tracker/issues/1802
       type: fast-track
-  grub2-pc-modules:
-    evra: 1:2.12-10.fc41.noarch
-    metadata:
-      bodhi: https://bodhi.fedoraproject.org/updates/FEDORA-2024-7d58433dd5
-      reason: https://github.com/coreos/fedora-coreos-tracker/issues/1802
-      type: fast-track
-
-
